--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .logo {
-  list-style-type: none;  
+  list-style-type: none;
 }
 
 .logo a {
@@ -33,43 +33,6 @@ body {
 .first {
   display: flex;
   justify-content: space-between;
-}
-
-.header {
-  font-weight: 900;
-  font-size: 40px;
-  line-height: 52px;
-  display: flex;
-  align-items: center;
-  color: #172b4d;
-  padding: 15px;
-  padding-top: 100px;
-  font-family: 'Poppins', sans-serif;
-}
-
-p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 24px;
-  color: #344563;
-  padding: 15px;
-  font-family: 'Poppins', sans-serif;
-  position: static;
-  left: 24px;
-  top: 276px;
-  font-style: normal;
-  width: 320px;
-}
-
-.connect {
-  font-weight: 50;
-  font-size: 16px;
-  line-height: 24px;
-  color: #7f8cff;
-  padding: 0 15px;
-  font-family: 'Poppins', sans-serif;
-  font-style: normal;
-  margin-bottom: 12;
 }
 
 .social {
@@ -177,7 +140,7 @@ button {
 }
 
 .bull:hover {
-  color: #EBEBFF;
+  color: #ebebff;
   background-color: #6070ff;
   box-shadow: 0px 8px 16px
   rgba(64, 83, 252, 0.24);
@@ -315,7 +278,7 @@ textarea {
   display: flex;
   flex-direction: row;
   align-items: center;
-  color: #EBEBFF;
+  color: #ebebff;
 }
 
 .langu {
