--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ button {
 .bull:hover {
   color: #ebebff;
   background-color: #6070ff;
-  box-shadow: 0px 8px 16pxrgba(64,83,252,0.24);
+  box-shadow: 0 8px 16pxrgba(64, 83, 252, 0.24);
 }
 
 .bull:active {
@@ -142,10 +142,6 @@ button {
   padding: 10px 15px;
   font-weight: 800;
   font-size: xx-large;
-}
-
-.roll li {
-  padding: 5px 5px;
 }
 
 .lang h2 {
@@ -165,7 +161,7 @@ button {
   font-size: 1.5em;
   margin-block-start: 0.83em;
   margin-block-end: 0.83em;
-  margin-inline-start: 0px;
+  margin-inline-start: 0;
   margin-inline-end: 0;
   font-weight: bold;
   margin-left: 5%;
