--- a/style.css
+++ b/style.css
@@ -4,11 +4,6 @@
 }
 
 body {
-  background-image: url("images/headershapmobil@2x.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: auto;
-  height: 100%;
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
   overflow: scroll;
@@ -49,6 +44,12 @@ body {
   padding: 15px;
   padding-top: 100px;
   font-family: 'Poppins', sans-serif;
+  background-image: url("images/headershapmobil@2x.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: auto;
+  
 }
 
 p {
@@ -84,12 +85,12 @@ p {
 
 .roll {
   display: flex;
-  padding-left: 15px;
+  padding-left: 10px;
 }
 
 .roll li {
   list-style-type: none;
-  padding-right: 10px;
+  padding-right: 5px;
 }
 
 .thirdos {
@@ -100,7 +101,7 @@ p {
 .thirdos li {
   list-style-type: none;
   border-radius: 8px;
-  padding: 2px 3px;
+  padding: 4px 12px;
   font-family: 'poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -128,6 +129,7 @@ button {
   align-items: center;
   text-align: center;
   border: #396df2 1px solid;
+  background-color: #fff;
 }
 
 .bull:hover {
@@ -183,13 +185,13 @@ button {
 }
 
 .js {
+  background: rgb(244, 247, 247);
   display: flex;
   align-items: center;
-  margin-left: 30px;
-  padding: 5px;
-  background-color: #ebebff;
+  margin-left: 20px;
+  padding: 5px 15px;
   margin-bottom: 15px;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 .js img {
@@ -219,64 +221,8 @@ button {
   padding-right: 50px;
 }
 
-.seven {
-  background-image: url("images/Contactme.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100%;
-  color: rgb(240, 240, 240);
-}
-
-.seven h1 {
-  font-weight: 900;
-  font-size: 40px;
-  line-height: 52px;
-  font-family: 'Poppins', sans-serif;
-  padding: 10% 10%;
-  justify-content: center;
-  align-items: center;
-}
-
-.for {
-  list-style-type: none;
-}
-
-.for li {
-  padding: 3px 3px;
-  margin-left: 15px;
-}
-
-.for input {
-  width: 100%;
-  height: 15%;
-  padding: 10px 0;
-  border-radius: 8px;
-  border: rgb(240, 240, 240) 1px;
-}
-
-textarea {
-  width: 95%;
-  height: 100px;
-  padding: 20px 10px;
-  border-radius: 10px;
-}
-
-.bu {
-  margin-left: 10px;
-}
-
-.box1 {
-  justify-content: center;
-  align-items: center;
-  margin: 10% 10%;
-  padding-bottom: 10%;
-}
-
-.box1 p {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  color: #ebebff;
+.fas {
+  color: #64686d;
 }
 
 .langu {
@@ -299,7 +245,8 @@ textarea {
 
 .work-container .second {
   background: white;
-  margin: 15px;
+  margin: 15px auto;
+  max-width: 90%;
   border-radius: 15px;
   border: 1px #dfe1e6 solid;
 }
