Add Centre Contact form heading h2

--- a/style.css
+++ b/style.css
@@ -413,6 +413,7 @@ nav img {
   align-items: center;
   margin-left: 18px;
   text-transform: capitalize;
+  text-align:center;
 }
 
 .contactform1 p {
