--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ header .logo {
 
 .body {
   border-radius: 0 0 0 35px;
-  background-image: url("images/headershapmobil@2x.svg");
+  background-image: url("images/Header-new.png");
   background-repeat: no-repeat;
   background-color: white;
   background-size: cover;
@@ -113,6 +113,7 @@ header .logo {
   display: grid;
   grid-template-columns: 1fr;
   margin: 20px;
+  gap: 50px;
 
   /* margin-top: 100px; */
 }
@@ -392,7 +393,7 @@ nav img {
 
 .contactform1 {
   background-color: #6070ff;
-  background-image: url("images/contact-mobile-bg.png");
+  background-image: url("images/contact-new.png");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: top right;
@@ -452,6 +453,10 @@ nav img {
   padding-left: 10px;
 }
 
+.show .ok {
+  display: none;
+}
+
 .contactform1 form input {
   width: 100%;
   padding-bottom: 25px;
@@ -463,8 +468,8 @@ nav img {
   border: none;
 }
 
-/*
-@media screen and (min-width:700px) {
+
+@media screen and (min-width:768px) {
   .nav .ham {
     display: none;
   }
@@ -479,20 +484,16 @@ nav img {
 }
 
  .body{
-   background-image: url("images/Headerbg@3x.png");
+   background-image: url("images/Header-new.png");
    border-bottom-left-radius: 100px;
  }
 .body .desc {
   width: 60%;
-  /*margin-left: 15%;
+  
 }
 
 .head-cont {
   margin-left: 40px;
-}
-
-.head-cont h1 {
-  width: 500px;
 }
 
 .body h1 {
@@ -503,58 +504,70 @@ nav img {
   margin-left: 20px;
 }
 
+h1 {
+   padding-left: 60px;
+}
+
 .mobile-image {
  height: auto;
  width: 100%;
 }
 
 .project {
-  display: flex;
+  /*
   flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap;
+  
+  
   box-sizing: border-box;
-  margin: 20px;
   border: 1px solid #dfe1e6;
   border-radius: 24px;
   padding: 15px;
   width: 70rem;
   height: 30rem;
-  margin-top: 4rem;
+  margin-top: 4rem;*/
+  display: flex;
+ justify-content: space-between;
+ flex-direction: row;
 }
 
 .project-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 30px;
-  gap: 30px;
-  margin: 20px;
+  padding: 50px;
+  gap: 100px;
+  margin: 50px;
 }
 
 .my-img {
-  min-width: 240px;
-  height: 100%;
+  width: 100%;
   border-radius: 8px;
-  margin: 1px 12px;
-  padding: 4px 12px;
 }
 
 .my-text {
-  /* width: 50%;
-  margin: 15px;
-  width: auto;
-  height: auto;
+  width: 100%;
+  margin: 10px;
+  margin-left: 25px;
 }
 
 .project:nth-child(even) {
   flex-direction: row-reverse;
+  padding-left: -50px;
 }
+
+.my-img .project:nth-child(odd) {
+  height: 50%;
+}
+
 .project:hover {
   cursor: pointer;
   border: 2px solid #a7aeff;
   box-shadow: 1px 10px 16px rgb(64, 83, 252, 0.24);
+}
+
+.show .ok {
+  display:flex;
 }
 
 .about-container {
@@ -654,4 +667,4 @@ form .button {
   color: rgb(196, 165, 165);
  }
  }
- */
+ 
