--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ ul li {
   width: 100%;
   position: absolute;
   opacity: 0.8;
+  z-index: 1;
 }
 
 nav img {
@@ -513,8 +514,7 @@ button:hover {
 }
 
 .blur {
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
+  filter: blur(5px);
 }
 
 @media screen and (min-width: 768px) {
