--- a/style.css
+++ b/style.css
@@ -229,6 +229,117 @@ header .logo {
   color: #344563;
 }
 
+.cancel {
+  display: flex;
+  float: right;
+  margin-right: 20px;
+  margin-top: -28px;
+}
+
+.project1 h2 {
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 44px;
+  color: #172b4d;
+  margin-left: 20px;
+}
+
+.list1 {
+  display: flex;
+  margin-left: 30px;
+}
+
+.list1 li {
+  padding-right: 5px;
+}
+
+.my-img1 {
+  margin-left: 15px;
+}
+
+.project1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: 1rem 2rem 1rem 4rem;
+  background-color: red;
+}
+
+.project1 p {
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: #344563;
+  width: 300px;
+  height: auto;
+  margin-left: 20px;
+  font-size: 15px;
+}
+
+.show1 {
+  display: flex;
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500px;
+  line-height: 20px;
+  margin-left: 40px;
+  padding-top: 10px;
+  
+}
+
+.show1 li {
+  padding: 3px 5px;
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  font-size: 12px;
+  line-height: 16px;
+  color: #6070ff;
+  background-color: #e4e4ff;
+  border-radius: 8px;
+  margin-right: 15px;
+}
+
+.ok1 {
+  display: none;
+}
+
+.house {
+  display: flex;
+  gap: 60px;
+  margin-left: 25px;
+  margin-bottom: 10px;
+  padding-top: 5px;
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  font-size: 15px;
+  line-height: 16px;
+  color: #3960f2;
+}
+
+.house .button1a {
+  color: #3960f2;
+  border: 1px solid #7b95fd;
+  padding: 5px 5px;
+  border-radius: 8px;
+  padding-right: 15px;
+  margin-top: 5px;
+}
+
+.button1a {
+  background-color: #fff;
+  padding-bottom: 5px;
+  
+}
+
 .tech-skills li {
   padding-top: 5px;
   padding-bottom: 5px;
@@ -565,6 +676,121 @@ button:hover {
     height: auto;
     width: 100%;
   }
+  
+.cancel {
+  display: flex;
+  float: right;
+  margin-right: 20px;
+  margin-top: -28px;
+}
+
+.project1 h2 {
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 42px;
+  line-height: 44px;
+  color: #172b4d;
+  margin-left: 300px;
+}
+
+.list1 {
+  display: flex;
+  margin-left: 300px;
+}
+
+.list1 li {
+  margin-right: 10px;
+}
+
+.my-img1 {
+  margin-left: 250px;
+}
+
+.mobile-image1 {
+  height: auto;
+  width: 50%;
+}
+
+.project1 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: 1rem 2rem 1rem 4rem;
+  background-color: red;
+}
+
+.ok1 {
+  display: flex;
+}
+
+.project1 p {
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
+  color: #344563;
+  width: 600px;
+  height: auto;
+  margin: 0 auto;
+  font-size: 15px;
+}
+
+.show1 {
+  display: flex;
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500px;
+  line-height: 20px;
+  margin-left: 280px;
+  padding-top: 10px;
+}
+
+.show1 li {
+  padding: 2px;
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  font-size: 12px;
+  line-height: 16px;
+  color: #6070ff;
+  border-radius: 8px;
+  margin-right: 5px;
+  background-color: #e4e4ff;
+  margin-right: 15px;
+}
+
+.house {
+  display: flex;
+  gap: 100px;
+  margin-left: 280px;
+  margin-bottom: 10px;
+  padding-top: 5px;
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 20px;
+  font-size: 15px;
+  line-height: 16px;
+  color: #3960f2;
+}
+
+.house .button1a {
+  color: #3960f2;
+  border: 1px solid #7b95fd;
+  padding: 5px 10px;
+  border-radius: 8px;
+  padding-right: 15px;
+  margin-top: 5px;
+}
+
+.button1a {
+  background-color: #fff;
+  padding-bottom: 5px;
+}
 
   .project {
     display: flex;
