--- a/style.css
+++ b/style.css
@@ -229,11 +229,10 @@ header .logo {
   color: #344563;
 }
 
-.cancel {
+.popupx {
   display: flex;
-  float: right;
-  margin-right: 20px;
-  margin-top: -28px;
+  margin-left: 350px;
+  margin-top: 20px;
 }
 
 .project1 h2 {
@@ -266,7 +265,7 @@ header .logo {
   bottom: 0;
   right: 0;
   margin: 1rem 2rem 1rem 4rem;
-  background-color: red;
+  background-color: #fff;
 }
 
 .project1 p {
@@ -288,7 +287,7 @@ header .logo {
   font-weight: 500px;
   line-height: 20px;
   margin-left: 40px;
-  padding-top: 10px;
+  padding-top: 2px;
   
 }
 
@@ -314,8 +313,8 @@ header .logo {
   display: flex;
   gap: 60px;
   margin-left: 25px;
-  margin-bottom: 10px;
-  padding-top: 5px;
+  margin-bottom: 5px;
+  padding-top: 2px;
   font-family: 'poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -328,7 +327,7 @@ header .logo {
 .house .button1a {
   color: #3960f2;
   border: 1px solid #7b95fd;
-  padding: 5px 5px;
+  padding: 3px 5px;
   border-radius: 8px;
   padding-right: 15px;
   margin-top: 5px;
@@ -336,7 +335,7 @@ header .logo {
 
 .button1a {
   background-color: #fff;
-  padding-bottom: 5px;
+  padding-bottom: 1px;
   
 }
 
@@ -472,6 +471,10 @@ button:hover {
   line-height: 24px;
   color: #344563;
   margin-left: 10px;
+}
+
+.my-img2 {
+  display: none;
 }
 
 .about h3 {
@@ -677,39 +680,60 @@ button:hover {
     width: 100%;
   }
   
-.cancel {
+.popupx {
   display: flex;
-  float: right;
-  margin-right: 20px;
-  margin-top: -28px;
+  margin-left: 1100px;
+  margin-top: 30px;
 }
 
 .project1 h2 {
   font-family: 'poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 42px;
-  line-height: 44px;
-  color: #172b4d;
-  margin-left: 300px;
+  font-size: 40px;
+  line-height: 52px;
+  color: #091e42;
+  margin-left: 30px;
+  margin-top: -30px;
 }
 
 .list1 {
   display: flex;
-  margin-left: 300px;
+  margin-left: 35px;
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
 }
 
 .list1 li {
-  margin-right: 10px;
+  padding-right: 10px;
+  color: #344563
 }
 
 .my-img1 {
-  margin-left: 250px;
+ display: none;
+}
+
+.my-img2 {
+  display: flex;
+}
+/* 
+.show1 .house {
+  display: flex;
+  flex-direction: ;
+} */
+
+.mobile-image2 {
+  width: 100%;
+  height: 400px;
 }
 
 .mobile-image1 {
-  height: auto;
-  width: 50%;
+  height: 30%;
+  width: 90%;
+  border: 1px red;
 }
 
 .project1 {
@@ -719,7 +743,8 @@ button:hover {
   bottom: 0;
   right: 0;
   margin: 1rem 2rem 1rem 4rem;
-  background-color: red;
+  background-color: #fff;
+
 }
 
 .ok1 {
@@ -736,6 +761,8 @@ button:hover {
   height: auto;
   margin: 0 auto;
   font-size: 15px;
+  margin-left: 10px;
+  padding-top: 5px;
 }
 
 .show1 {
@@ -746,6 +773,9 @@ button:hover {
   line-height: 20px;
   margin-left: 280px;
   padding-top: 10px;
+  float: right;
+  margin-top: -90px;
+  margin-right: 250px;
 }
 
 .show1 li {
@@ -765,10 +795,10 @@ button:hover {
 
 .house {
   display: flex;
-  gap: 100px;
+  gap: 20px;
   margin-left: 280px;
   margin-bottom: 10px;
-  padding-top: 5px;
+  padding-top: 3px;
   font-family: 'poppins', sans-serif;
   font-style: normal;
   font-weight: 500;
@@ -776,6 +806,9 @@ button:hover {
   font-size: 15px;
   line-height: 16px;
   color: #3960f2;
+  float: right;
+  margin-top: -50px;
+  margin-right: 280px;
 }
 
 .house .button1a {
