--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ header .logo {
   font-family: 'poppins', sans-serif;
   font-style: normal;
   font-weight: 700;
-  font-size: 32px;
+  font-size: 25px;
   line-height: 44px;
   color: #172b4d;
   margin-left: 20px;
@@ -248,7 +248,9 @@ header .logo {
 
 .list1 {
   display: flex;
-  margin-left: 30px;
+  margin-left: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .list1 li {
@@ -257,6 +259,7 @@ header .logo {
 
 .my-img1 {
   margin-left: 15px;
+  margin-bottom: 10px;
 }
 
 .project1 {
@@ -291,8 +294,10 @@ header .logo {
   font-style: normal;
   font-weight: 500;
   line-height: 20px;
-  margin-left: 40px;
+  margin-left: 18px;
   padding-top: 2px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 .show1 li {
@@ -314,8 +319,8 @@ header .logo {
 
 .house {
   display: flex;
-  gap: 60px;
-  margin-left: 25px;
+  gap: 10px;
+  margin-left: 18px;
   margin-top: 2px;
   padding-top: 2px;
   font-family: 'poppins', sans-serif;
@@ -752,9 +757,9 @@ button:hover {
     font-weight: 400;
     line-height: 20px;
     color: #344563;
-    width: 600px;
+    width: 500px;
     height: auto;
-    margin: 0 auto;
+    margin-top: 5px;
     font-size: 15px;
     margin-left: 24px;
     padding-top: 5px;
@@ -769,8 +774,8 @@ button:hover {
     margin-left: 280px;
     padding-top: 10px;
     float: right;
-    margin-top: -90px;
-    margin-right: 250px;
+    margin-top: -55px;
+    margin-right: 350px;
   }
 
   .show1 li {
@@ -789,7 +794,7 @@ button:hover {
   .house {
     display: flex;
     gap: 20px;
-    margin-left: 280px;
+    margin-left: 100px;
     margin-bottom: 10px;
     padding-top: 3px;
     font-family: 'poppins', sans-serif;
@@ -799,8 +804,8 @@ button:hover {
     line-height: 16px;
     color: #3960f2;
     float: right;
-    margin-top: -50px;
-    margin-right: 280px;
+    margin-top: -28px;
+    margin-right: 380px;
   }
 
   .button1a {
