--- a/style.css
+++ b/style.css
@@ -637,6 +637,18 @@ button:hover {
   filter: blur(5px);
 }
 
+.sub1 {
+  padding-top: 10px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  font-family: 'poppins', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 24px;
+  color: #6070ff;
+}
+
 @media screen and (min-width: 768px) {
   .nav .ham {
     display: none;
@@ -964,5 +976,17 @@ button:hover {
 
   .fas {
     color: rgb(196, 165, 165);
+  }
+
+  .sub1 {
+    margin-left: 560px;
+    padding: 12px 16px;
+    border-radius: 8px;
+    font-family: 'poppins', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 17px;
+    line-height: 24px;
+    color: #6070ff;
   }
 }
