--- a/style.css
+++ b/style.css
@@ -988,4 +988,12 @@ button:hover {
     line-height: 24px;
     color: #6070ff;
   }
+
+  #error {
+    margin-left: 400px;
+    position: absolute;
+    top: 35px;
+    left: 10px;
+    
+  }
 }
