--- a/style.css
+++ b/style.css
@@ -112,7 +112,18 @@ header .logo {
   color: #6070ff;
   font-family: 'Poppins', sans-serif;
   margin-left: 5px;
-  transform: rotate(45deg);
+  animation-duration: 3s;
+  animation-name: slideIn;
+}
+
+@keyframes slideIn {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  } to {
+    margin-left: 0%;
+    width: 100%;
+  }
 }
 
 .body p {
